Use a UI thread for capturing on macOS.

https://chromium-review.googlesource.com/c/chromium/src/+/681850 changed
the default run loop on Mac, which broke our capturer (it started
returning zero-size frames for all but the initial capture). I'm not
sure what our dependency on MessagePumpCFRunLoop is, but switching to a
UI thread means that the capturer has access to one again.

Change-Id: I9ac8ac19f325f88f9e758613f50ac2a2a00dc01d
Bug: 827300
Reviewed-on: https://chromium-review.googlesource.com/996296
Reviewed-by: Joe Downing <joedow@chromium.org>
Commit-Queue: Jamie Walch <jamiewalch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548278}
Former-commit-id: 1ac41f213ba266368cc4207a3b5ca884961878fc